--- a/.gitmodules
+++ b/.gitmodules
@@ -1,16 +1,16 @@
 [submodule "libs/tree-sitter"]
 	path = libs/tree-sitter
-  url = https://github.com/tree-sitter/tree-sitter.git
+	url = https://github.com/tree-sitter/tree-sitter.git
   ignore = dirty
 [submodule "libs/tree-sitter-c"]
 	path = libs/tree-sitter-c
-  url = https://github.com/tree-sitter/tree-sitter-c
+	url = https://github.com/tree-sitter/tree-sitter-c.git
   ignore = dirty
 [submodule "libs/tree-sitter-ruby"]
 	path = libs/tree-sitter-ruby
-  url = https://github.com/tree-sitter/tree-sitter-ruby.git
+	url = https://github.com/tree-sitter/tree-sitter-ruby.git
   ignore = dirty
 [submodule "libs/libgrapheme"]
 	path = libs/libgrapheme
-  url = https://git.suckless.org/libgrapheme
+	url = https://git.suckless.org/libgrapheme.git
   ignore = dirty
