--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,15 @@
+[submodule "libs/libgrapheme"]
+	path = libs/libgrapheme
+	url = https://git.suckless.org/libgrapheme.git
+  ignore = dirty
+
+; tree-sitter
 [submodule "libs/tree-sitter"]
 	path = libs/tree-sitter
 	url = https://github.com/tree-sitter/tree-sitter.git
   ignore = dirty
+
+; Tree-sitter languages
 [submodule "libs/tree-sitter-c"]
 	path = libs/tree-sitter-c
 	url = https://github.com/tree-sitter/tree-sitter-c.git
@@ -10,7 +18,43 @@
 	path = libs/tree-sitter-ruby
 	url = https://github.com/tree-sitter/tree-sitter-ruby.git
   ignore = dirty
-[submodule "libs/libgrapheme"]
-	path = libs/libgrapheme
-	url = https://git.suckless.org/libgrapheme.git
+[submodule "libs/tree-sitter-c"]
+	path = libs/tree-sitter-c
+	url = https://github.com/tree-sitter/tree-sitter-c.git
+  ignore = dirty
+[submodule "libs/tree-sitter-cpp"]
+	path = libs/tree-sitter-cpp
+	url = https://github.com/tree-sitter/tree-sitter-cpp.git
+  ignore = dirty
+[submodule "libs/tree-sitter-css"]
+	path = libs/tree-sitter-css
+	url = https://github.com/tree-sitter/tree-sitter-css.git
+  ignore = dirty
+[submodule "libs/tree-sitter-html"]
+	path = libs/tree-sitter-html
+	url = https://github.com/tree-sitter/tree-sitter-html.git
+  ignore = dirty
+[submodule "libs/tree-sitter-javascript"]
+	path = libs/tree-sitter-javascript
+	url = https://github.com/tree-sitter/tree-sitter-javascript.git
+  ignore = dirty
+[submodule "libs/tree-sitter-json"]
+	path = libs/tree-sitter-json
+	url = https://github.com/tree-sitter/tree-sitter-json.git
+  ignore = dirty
+[submodule "libs/tree-sitter-python"]
+	path = libs/tree-sitter-python
+	url = https://github.com/tree-sitter/tree-sitter-python.git
+  ignore = dirty
+[submodule "libs/tree-sitter-haskell"]
+	path = libs/tree-sitter-haskell
+	url = https://github.com/tree-sitter/tree-sitter-haskell.git
+  ignore = dirty
+[submodule "libs/tree-sitter-go"]
+	path = libs/tree-sitter-go
+	url = https://github.com/tree-sitter/tree-sitter-go.git
+  ignore = dirty
+[submodule "libs/tree-sitter-bash"]
+	path = libs/tree-sitter-bash
+	url = https://github.com/tree-sitter/tree-sitter-bash.git
   ignore = dirty
