--- a/.gitmodules
+++ b/.gitmodules
@@ -66,3 +66,6 @@
 [submodule "libs/tree-sitter-fish"]
 	path = libs/tree-sitter-fish
 	url = https://github.com/ram02z/tree-sitter-fish
+[submodule "libs/tree-sitter-rust"]
+	path = libs/tree-sitter-rust
+	url = https://github.com/tree-sitter/tree-sitter-rust.git
